# hpipm-cpp_sample

./: CMakeLists.txt  package.xml
example/: example_dense_qp.cpp  example_mpc.cpp  example_ocp_qp.cpp
